[metadata]
name = sslmask
version = 0.0.1
author = lanXuage
license = MIT
author_email = lanxuage@gmail.com
description = An advanced Python - based proxy solution that not only enables TLS proxying but also ingeniously mimics browser TLS fingerprints. 
long_description = file: README.md
long_description_content_type = text/markdown